# TASA

./: .gitignore  README.md  asr_eval.py  get_insts.py  get_patching_scores.py  pyproject.toml  temppatch.py  utils.py
TransformerLens/transformer_lens/: loading_from_pretrained.py
data/: README.md  harmbench_behaviors_text_test_standard.csv  jbb_harmful-behaviors_no-harmbench.csv  llama-2_patching.json
data/alpaca_cleaned/: clean_alpaca_safety.py
