[project]
name = "tasa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformer-lens",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "typeguard>=4.4.2",
    "vllm>=0.9.0.1",
]

[tool.uv.sources]
transformer-lens = { path = "TransformerLens", editable = true }
